Prevent clicks on invisible elements

--- a/web/css/abstracts/mixins/_listing.less
+++ b/web/css/abstracts/mixins/_listing.less
@@ -21,6 +21,8 @@
 
         .price-box ~ * {
             opacity: 0;
+            visibility: hidden;
+            pointer-events: none;
         }
     }
 
@@ -40,6 +42,8 @@
             &:focus-within {
                 .price-box ~ * {
                     opacity: 1;
+                    visibility: visible;
+                    pointer-events: all;
                 }
 
                 & when not (@listing-grid-item-name__line-clamp = false) {
